-（修复）兼容旧版配置自动迁移